Adjust print styling to omit shadows and to ensure code is wrapped

--- a/public/css/docs/layout.css
+++ b/public/css/docs/layout.css
@@ -1479,6 +1479,17 @@ button.side-menu-list-item-namespace-icon {
 		padding-top: 1.5em;
 		margin-left: 0;
 	}
+
+	/*
+	* Adjust the position of additional print content.
+	*/
+	.print-addendum {
+		margin-top: 2em;
+	}
+
+	.print-addendum p {
+		margin-top: 1em;
+	}
 }
 
 /*
